--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,37 @@
-# for eclipse
-/.settings/
-/.project
+# See https://git.oschina.net/hjm100 for more about ignoring files.
 
-# for idea
-*.iml
+# compiled output
+/dist
+/tmp
+
+# dependencies
+/node_modules
+
+# IDEs and editors
 /.idea
-*/target
-.DS_Store
-.gitattributes
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# 忽略 .a 文件
+*.a
+
+# 但否定忽略 lib.a, 尽管已经在前面忽略了 .a 文件
+!lib.a
+
+# 仅在当前目录下忽略 TODO 文件， 但不包括子目录下的 subdir/TODO
+/TODO
+
+# 忽略 build/ 文件夹下的所有文件
+build/
+
+# 忽略 doc/notes.txt, 不包括 doc/server/arch.txt
+doc/*.txt
+
+# 忽略所有的 .pdf 文件 在 doc/ directory 下的
+doc/**/*.pdf
+
+/.gitee
