--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,31 @@
     <artifactId>vw-crawler</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <log.version>1.7.25</log.version>
+
+    </properties>
+
+
     <dependencies>
         <!-- jsoup -->
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.11.1</version>
+        </dependency>
+
+        <!-- slf4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${log.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${log.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
